fixing alignment of content

--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -28,7 +28,7 @@
           width: 100%;
           height: 20px;
           margin-top: -12px;
-          text-align: right;
+          text-align: center;
           color: white;
           i {
             margin-top: -12px;
@@ -44,7 +44,7 @@
       max-width: 400px;
       margin: 0 auto;
       padding: 25px;
-      text-align: right;
+      text-align: left;
       background-color: $white;
       h4 {
         margin: 0;
@@ -77,7 +77,7 @@
   }
   .modal-content {
     padding: 100px 0;
-    text-align: right;
+    text-align: left;
     h2 {
       font-size: 3em;
       margin-bottom: 15px;
